# dotfiles-public

./: .chezmoi.toml.tmpl  .chezmoiignore  .editorconfig  .gitignore  .mcp.json  .mise.toml  .pre-commit-config.yaml  .sops.yaml  .tool-versions  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMPLETION_CHANGES.md  LICENSE  README.md  apply.sh  bootstrap.sh  changes.patch  cleanup.sh  code  complete.txt  complete_inner.txt  complete_outer.txt  demo-interactive-config.sh  deploy-remote.sh  flake.nix  home.nix  shell.nix  test-user-detection.sh  wsl-init.sh  zen.7z
.chezmoidata/: packages.yaml  users.yaml
.claude/: .gitignore  CLAUDE.md  README.md  settings.json  settings.local.json  setup-plugins.sh  statusline-starship.sh
.github/: copilot-instructions.md
.mcp/: README.md  global.json  memory.json
.serena/: project.yml  serena_config.yml
LearnSuperClaude/: Personas.md  Plan.md  Troubleshoot.md
cuda-setup/: .gitignore  CLI_DESIGN.md  PHASE1_COMPLETE.md  README.md  check-driver.sh  compile-test.sh  cuda-test  fix-nvidia-smi.sh  install-cuda.sh  pyproject.toml  test-cuda.sh
cuda-setup/cuda_cli/: __init__.py  main.py
cuda-setup/cuda_cli/commands/: __init__.py  check.py  fix.py  info.py
cuda-setup/cuda_cli/core/: __init__.py  constants.py  driver.py  nvidia_smi.py  system.py
cuda-setup/cuda_cli/utils/: __init__.py  output.py  subprocess_utils.py
docs/: AI_AGENT_MODE.md  COMPLETIONS.md  DX_FEATURES.md  MUTABLE_PACKAGE_MANAGERS.md  OFFLINE_DEPLOYMENT.md  PERFORMANCE.md  QUICKSTART.md  SECRETS_MANAGEMENT.md  USER_CONFIGURATION.md  USER_CONFIG_IMPROVEMENTS.md  WSL_SETUP.md
elvish/: rc.elv
examples/: README.md  bash.txt  docker.txt  git.txt  nix.txt  tmux.txt
home/: .chezmoiexternal.toml  .chezmoiignore  dot_bashrc.tmpl  dot_gitconfig.tmpl  dot_inputrc  dot_mcp.json.tmpl  dot_pre-commit-config.yaml  dot_zshrc.tmpl  run_once_check-github-auth.sh.tmpl  (+5 more)
(+311 files in other folders)
