[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cuda-setup-wsl2"
version = "0.1.0"
description = "Modern CLI tool for CUDA 12.9 setup on WSL2"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "CUDA Setup Contributors"}
]
keywords = ["cuda", "wsl2", "nvidia", "gpu", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Installation/Setup",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
cuda-setup = "cuda_cli.main:app"

[project.urls]
Homepage = "https://github.com/yourusername/cuda-setup"
Documentation = "https://github.com/yourusername/cuda-setup#readme"
Repository = "https://github.com/yourusername/cuda-setup"
Issues = "https://github.com/yourusername/cuda-setup/issues"

[tool.setuptools]
packages = ["cuda_cli", "cuda_cli.commands", "cuda_cli.core", "cuda_cli.utils"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
